@@ -23,6 +23,7 @@
 ## @deftypefnx {} {[@var{y}, @var{i}, @var{j}] =} unique (@dots{})
 ## @deftypefnx {} {[@var{y}, @var{i}, @var{j}] =} unique (@dots{}, "first")
 ## @deftypefnx {} {[@var{y}, @var{i}, @var{j}] =} unique (@dots{}, "last")
+## @deftypefnx {} {[@var{y}, @var{i}, @var{j}] =} unique (@dots{}, "legacy")
 ## Return the unique elements of @var{x} sorted in ascending order.
 ##
 ## If the input @var{x} is a column vector then return a column vector;
@@ -33,14 +34,19 @@
 ## rows of @var{x} sorted in ascending order.  The input must be a 2-D matrix
 ## to use this option.
 ##
-## If requested, return index vectors @var{i} and @var{j} such that
+## If requested, return column index vectors @var{i} and @var{j} such that
 ## @code{@var{y} = @var{x}(@var{i})} and @code{@var{x} = @var{y}(@var{j})}.
 ##
-## Additionally, if @var{i} is a requested output then one of
-## @qcode{"first"} or @qcode{"last"} may be given as an input.  If
-## @qcode{"last"} is specified, return the highest possible indices in
-## @var{i}, otherwise, if @qcode{"first"} is specified, return the lowest.
-## The default is @qcode{"last"}.
+## Additionally, if @var{i} is a requested output then one of the flags
+## @qcode{"first"} or @qcode{"last"} may be given.  If @qcode{"last"} is
+## specified, return the highest possible indices in @var{i}, otherwise, if
+## @qcode{"first"} is specified, return the lowest.  The default is
+## @qcode{"first"}.
+##
+## Programming Note: The input flag @qcode{"legacy"} changes the default
+## to @qcode{"last"}, and the shape of the outputs @var{i}, @var{j} will follow
+## the shape of the input @var{x} rather than always being column vectors.
+##
 ## @seealso{union, intersect, setdiff, setxor, ismember}
 ## @end deftypefn
 
@@ -58,12 +64,13 @@ function [y, i, j] = unique (x, varargin)
       error ("unique: options must be strings");
     endif
 
-    optrows  = any (strcmp ("rows", varargin));
-    optfirst = any (strcmp ("first", varargin));
-    optlast  = any (strcmp ("last", varargin));
+    optrows   = any (strcmp ("rows", varargin));
+    optfirst  = any (strcmp ("first", varargin));
+    optlast   = any (strcmp ("last", varargin));
+    optlegacy = any (strcmp ("legacy", varargin));
     if (optfirst && optlast)
       error ('unique: cannot specify both "first" and "last"');
-    elseif (optfirst + optlast + optrows != nargin-1)
+    elseif (optfirst + optlast + optrows + optlegacy != nargin-1)
       error ("unique: invalid option");
     endif
 
@@ -73,7 +80,8 @@ function [y, i, j] = unique (x, varargin)
     endif
   else
     optrows = false;
-    optfirst = false;
+    optfirst = true;
+    optlegacy = false;
   endif
 
   ## FIXME: The operations
@@ -97,10 +105,9 @@ function [y, i, j] = unique (x, varargin)
 
   if (optrows)
     n = rows (x);
-    dim = 1;
   else
     n = numel (x);
-    dim = (rows (x) == 1) + 1;
+    isrowvec = isrow (x);
   endif
 
   y = x;
@@ -123,6 +130,7 @@ function [y, i, j] = unique (x, varargin)
   if (optrows)
     if (nargout > 1)
       [y, i] = sortrows (y);
+      i = i(:);
     else
       y = sortrows (y);
     endif
@@ -134,6 +142,7 @@ function [y, i, j] = unique (x, varargin)
     endif
     if (nargout > 1)
       [y, i] = sort (y);
+      i = i(:);
     else
       y = sort (y);
     endif
@@ -147,10 +156,9 @@ function [y, i, j] = unique (x, varargin)
 
   if (isargout (3))
     j = i;
-    if (dim == 1)
-      j(i) = cumsum ([1; ! match]);
-    else
-      j(i) = cumsum ([1, ! match]);
+    j(i) = cumsum ([1; ! match(:)]);
+    if (optlegacy && isrowvec)
+      j = j.';
     endif
   endif
 
@@ -160,6 +168,9 @@ function [y, i, j] = unique (x, varargin)
       idx += 1;   # in-place is faster than other forms of increment
     endif
     i(idx) = [];
+    if (optlegacy && isrowvec)
+      i = i.';
+    endif
   endif
 
 endfunction
@@ -194,27 +205,33 @@ endfunction
 %!test
 %! [a,i,j] = unique ([1,1,2,3,3,3,4]);
 %! assert (a, [1,2,3,4]);
-%! assert (i, [2,3,6,7]);
-%! assert (j, [1,1,2,3,3,3,4]);
-%!
+%! assert (i, [1;3;4;7]);
+%! assert (j, [1;1;2;3;3;3;4]);
+
 %!test
-%! [a,i,j] = unique ([1,1,2,3,3,3,4]', "first");
+%! [a,i,j] = unique ([1,1,2,3,3,3,4]', "last");
 %! assert (a, [1,2,3,4]');
-%! assert (i, [1,3,4,7]');
-%! assert (j, [1,1,2,3,3,3,4]');
-%!
+%! assert (i, [2;3;6;7]);
+%! assert (j, [1;1;2;3;3;3;4]);
+
 %!test
 %! [a,i,j] = unique ({"z"; "z"; "z"});
 %! assert (a, {"z"});
-%! assert (i, [3]');
+%! assert (i, [1]);
 %! assert (j, [1;1;1]);
-%!
+
 %!test
-%! A = [1,2,3;1,2,3];
+%! A = [1,2,3; 1,2,3];
 %! [a,i,j] = unique (A, "rows");
 %! assert (a, [1,2,3]);
 %! assert (A(i,:), a);
 %! assert (a(j,:), A);
+
+%!test
+%! [a,i,j] = unique ([1,1,2,3,3,3,4], "legacy");
+%! assert (a, [1,2,3,4]);
+%! assert (i, [2,3,6,7]);
+%! assert (j, [1,1,2,3,3,3,4]);
 
 ## Test input validation
 %!error unique ()
